Adds a doc with some notes on OAuth2

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "knex": "^0.5.16",
     "mocha": "^1.17.1",
     "nodemon": "^1.2.1",
+    "passport-oauth": "^1.0.0",
     "request": "^2.34.0",
     "sqlite3": "~2.2.0"
   }
